home-cluster/netalertx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netalertx
  namespace: netalertx
spec:
  selector:
    app: netalertx
  ports:
  - port: 20211
    targetPort: 20211
